--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /db
 /deps
 /*.ez
+/.cache/
+
 
 # Generated on crash by the VM
 erl_crash.dump
@@ -12,7 +14,7 @@ npm-debug.log
 
 # Static artifacts
 /assets/node_modules
-
+/assets/elm-stuff
 # Since we are building assets from assets/,
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
