Update parcel watch config to put CSS in right place

--- a/assets/package.json
+++ b/assets/package.json
@@ -2,8 +2,8 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "deploy": "parcel build ./js/app.js --out-dir priv/static/js",
-    "watch": "parcel watch ./js/main.js --out-dir priv/static/js"
+    "deploy": "parcel build ./js/app.js --out-dir priv/static",
+    "watch": "parcel watch ./js/main.js ./css/app.css --out-dir priv/static"
   },
   "dependencies": {
     "parcel-bundler": "^1.10.3",
