--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ npm-debug.log
 # Static artifacts
 /assets/node_modules
 /assets/elm-stuff
+/assets/.cache
+/assets/priv
+/assets/static
 # Since we are building assets from assets/,
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
